use generated secret

--- a/views/edit_photo.erb
+++ b/views/edit_photo.erb
@@ -9,7 +9,7 @@
 
       <div class="submit">
         <input class="primary" type="submit" form="photo-form"/>
-        <a href="/photos/manage"><button>Cancel</button></a>
+        <a href="/manage"><button>Cancel</button></a>
       </div>
     </div>
   </div>
