--- a/views/index.erb
+++ b/views/index.erb
@@ -10,9 +10,7 @@
       </div>
     </div>
 
-    <a href="/photos/manage">
-      <button>Manage Photos</button>
-    </a>
+    <a href="/manage"><button>Manage Photos</button></a>
   </div>
 
   <div class="photos">
