don't require blurb

--- a/views/edit_photo.erb
+++ b/views/edit_photo.erb
@@ -4,7 +4,7 @@
     <div class="photo-form">
       <form id="photo-form" method="post" action="/photos/<%= @entry.document_id %>">
         <input type="text" name="title" value="<%= @entry[:title] %>" placeholder="Title this photo" required/>
-        <input type="text" name="blurb" value="<%= @entry[:blurb] %>" placeholder="Write something about this photo..." required/>
+        <input type="text" name="blurb" value="<%= @entry[:blurb] %>" placeholder="Write something about this photo..."/>
       </form>
 
       <div class="submit">
