--- a/views/manage.erb
+++ b/views/manage.erb
@@ -11,7 +11,7 @@
         <div class="photo-form">
           <form id="photo-form" method="post" action="/photos" enctype="multipart/form-data">
             <input type="text" name="title" placeholder="Title this photo" required/>
-            <input type="text" name="blurb" placeholder="Write something about this photo..." required/>
+            <input type="text" name="blurb" placeholder="Write something about this photo..."/>
             <input type="file" name="photo" required/>
           </form>
 
