--- a/views/base.scss
+++ b/views/base.scss
@@ -59,6 +59,22 @@ button, input[type=submit] {
   }
 }
 
+.file-dropper {
+  height: 80px;
+  border: 1px solid lightgray;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: copy;
+  user-select: none;
+
+  &:hover {
+    border: 1px dashed black;
+  }
+}
+
 @import "scss/index";
 @import "scss/login";
 @import "scss/manage";
