try adding type to script tags

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<script src="/photo_form.js"></script>
+<script src="/photo_form.js" type=application/javascript charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
   document.addEventListener('DOMContentLoaded', () => {
     photoFormSetup(
