--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="/style.css">
 
+  <link rel="icon" href="/favicon.png">
   <title><%= @title %> <%= @title ? '- ' : '' %> Dewey's Photos</title>
 </head>
 <body>
