--- a/views/manage.erb
+++ b/views/manage.erb
@@ -39,7 +39,7 @@
   </main>
 </div>
 
-<script src="/photo_form.js"></script>
+<script src="/photo_form.js" type=application/javascript charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
   document.addEventListener('DOMContentLoaded', () => {
     const logOut = document.getElementById('logout');
